<resources>
    <string name="app_name">Haircut</string>
    <string name="welcome_label">welcome</string>
    <string name="f_name_hint">Enter first name</string>
    <string name="lname_hint">Enter last name</string>
    <string name="email_hint">Enter email</string>
    <string name="pwd_hint">Enter password</string>
    <string name="already_registered">Already Registered?</string>
    <string name="which_user_are_you">Which user are you?</string>
    <string name="recover_password_btn">recover password</string>
    <string name="password_recovery">Password recovery</string>
    <string name="reset_password_label">Reset Password</string>
    <string name="reset">Reset</string>
    <string name="barber">Barber</string>
    <string name="admin">Ali</string>
    <string name="customer">Customer</string>
    <string name="login">Login</string>
    <string name="first_time">First Time?</string>
    <string name="password">Password</string>
    <string name="email_field">Email</string>
    <string name="log_in">Log In</string>
    <string name="login1">Login</string>
    <string name="login2">Login</string>
    <string name="already_registered1">Already Registered?</string>
    <string name="first_time1">First Time?</string>
    <string name="password1">Password</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="email1">Email</string>
    <string name="log_in1">Log In</string>
    <string name="signup2">Signup</string>
    <string name="signup">Signup</string>
    <string name="login_signup">Login/signup</string>
    <string name="email_label">Email</string>
    <string name="login_login_page">Log In</string>
    <string name="password_login_page">Password</string>
    <string name="login_page">Login</string>
    <string name="login_button">Log In</string>
    <string name="admin_page">Admin</string>
    <string name="profile_picture_admin">Profile Picture</string>
    <string name="admin_default_name">Name</string>
    <string name="profile_picture_admin_page">Profile Picture</string>
    <string name="admin_page_text">Admin</string>
    <string name="barber_admin_page">Barber</string>
    <string name="view_rating_reviews">View Rating/Reviews</string>
    <string name="sign_out_admin_page">Sign Out</string>
    <string name="barbershop_name">صاون الشيراتون</string>
    <string name="profile_barber">Profile</string>
    <string name="menu_button">Services menu</string>
    <string name="appointments_button">Appointments</string>
    <string name="payment_barber">Payment</string>
    <string name="check_reviews_barber">Reviews</string>
    <string name="sign_out_barber">Sign out</string>
    <string name="haircut_cus_page">Haircut</string>
    <string name="find_your_barber">Find your barber</string>
    <string name="sheraton_salon">Sheraton salon</string>
    <string name="nearby_shop">nearby shop</string>
    <string name="capo_salon_cus_page">Capo salon</string>
    <string name="popular_barbershop">Popular Barbershop</string>
    <string name="popular_shop">popular shop</string>
    <string name="sheraton_salon_cus_page">Sheraton salon</string>
    <string name="menu_cus_page">menu customer page</string>
    <string name="nearby_cus_page">nearby</string>
    <string name="email">Email</string>
    <string name="verification_code">Verification Code</string>
    <string name="verification_code_hint">Enter Verification code</string>
    <string name="send_verification_code">Send</string>
    <string name="verify_btn">Verify</string>
    <string name="admin_welcome_page">Admin</string>
    <string name="side_menu_button_customer">Menu Button</string>
    <string name="About_us">About us</string>
    <string name="profile_customer">Profile</string>
    <string name="open_sidebar_menu">Open Sidebar Menu</string>
    <string name="book_an_appointment">Book an appointment</string>
    <string name="chat_with_barber">Chat with Barber</string>
    <string name="about_us">About us</string>
    <string name="about_us_content">Introducing [Haircut], revolutionizing the barbershop experience. Our app utilizes technology to minimize wasted time, enhance customer satisfaction, and empower barbers. Features include easy appointments, a rating system, personalized communication, secure payments, and convenient sign-up options. Join us in transforming the world of barbershops. Download [Haircut] today for a seamless grooming experience.</string>
    <string name="back">Back</string>
    <string name="first_review">Great service! The barber was friendly and professional. Will definitely come back!</string>
    <string name="first_reviewer">Ahmad Khalid</string>
    <string name="go_back_button">Go back</string>
    <string name="ratings_and_reviews">Ratings and Reviews</string>
    <string name="sign_out_button_customer">Sign out</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="signout_message">Are you sure you want to sign out?</string>
    <string name="signout">Signout</string>
    <string name="go_back">Go Back</string>
    <string name="type_a_message">Type a message</string>
    <string name="send_button_chat">Send</string>
    <string name="book_appointment__text">Book Appointment</string>
    <string name="selected_date">Selected Date:</string>
    <string name="available_times">Available Times:</string>
    <string name="book_appointment_button">Book Appointment</string>
    <string name="sheraton_name">Sheraton</string>
    <string name="scroll_view_description">Scrollable content area for appointment booking</string>
    <string name="sidebar_headerText">Home</string>
    <string name="edit_profile_barber">Edit profile</string>
    <string name="sheraton_email">sheraton@gmail.com</string>
    <string name="open">Open Navigation Drawer</string>
    <string name="close">Close Navigation Drawer</string>
    <string name="profile">Profile</string>
    <string name="update_profile">Update</string>
    <string name="update_password_error_message1">Incorrect password</string>
    <string name="update_password_error_message2">New password must match retyped password</string>
    <string name="update_password_error_message3">Please enter a valid password</string>
    <string name="update_password_error_message4">Failed to update the password, incorrect password or user does not exist</string>
    <string name="update_password_error_message5">Please enter a valid first name</string>
    <string name="update_password_error_message6">Please enter a valid last name</string>
    <string name="update_password_error_message7">Please enter a valid email name</string>
    <string name="update_password_success_message">Password updated successfully</string>
    <string name="update_user_profile_success_message">User data has been updated successfully</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sidebar_title">Barber\n\n</string>
    <string name="menu_label">Menu</string>
    <string name="see_appointments_text">See Appointments</string>
    <string name="lava_salon">Lava Salon</string>
    <string name="king_of_shaves_salon">King of shaves Salon</string>
    <string name="maria_salon">Maria Salon</string>
    <string name="_90_seconds_salon">90 seconds Salon</string>
    <string name="edit_services_menu">Edit Services Menu</string>
    <string name="admin1">Admin</string>
    <string name="view_user">View User</string>
    <string name="block_user">Block User</string>
    <string name="delete_user">Delete User</string>
    <string name="customer_name">Customer Name</string>
    <string name="appointment_date">Appointment Date</string>
    <string name="appointment_time">Appointment Time</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="google_maps_api_key">AIzaSyDkjclvFuCZBIxcEarf0WNtF3Veesh2wHs</string>

    <!--    Debug values-->
<!--    <string name="default_email">myujproject@gmail.com</string>-->
    <string name="default_email">example10@example.com</string>
<!--    <string name="default_email">test3@example.com</string>-->
    <string name="default_first_name">M</string>
    <string name="default_last_name">R</string>
    <string name="default_password">Rgjsi1252</string>
<!--    <string name="default_password">Testing123</string>-->
    <string name="rate_and_review_barbershop">Rate and review barbershop</string>
    <string name="find_barbershops">Find Barbershops</string>
    <string name="chat_with_customer">chat with customer</string>
</resources>